# fragmentation

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  LICENSE.md  MARA.md  README.md  REAL_LICENSE.md  flake.nix  gleam.toml
.github/workflows/: publish.yml  test.yml
docs/: AGENT-GUIDE.md  AGENT-USING-THIS.md  AGENT-WHAT-IS-THIS.md  INDEX.md  MARA.gestalt  MODULES.md  USING-THIS.md  WHAT-FRAGMENTATION-IS.md  WHAT-IS-THIS.md  WITNESSED.md
gleam/: gleam.toml  manifest.toml
gleam/src/: fragmentation.gleam  fragmentation_ffi.erl
gleam/src/fragmentation/: diff.gleam  walk.gleam
gleam/test/: encoding_test.gleam
rust/: Cargo.toml
rust/src/: diff.rs  encoding.rs  fragment.rs  git.rs  ref_.rs  sha.rs  store.rs  walk.rs  witnessed.rs
rust/tests/: fragmentation_test.rs  git_test.rs
src/: actor.rs  diff.rs  encoding.rs  fragment.rs  fragmentation.gleam  git.rs  keys.rs  lib.rs  ref_.rs  sha.rs  store.rs  walk.rs  witnessed.rs
src/fragmentation/: diff.gleam  encoding.gleam  git.gleam  store.gleam  walk.gleam
test/: fragmentation_git_test.gleam  fragmentation_test.gleam
tests/: actor_test.rs  encoding_test.rs  fragmentation_test.rs  generic_fragment_test.rs  git_native_test.rs
